# spring-clean

./: LICENSE  README.md  spring-clean.cabal
src/: Config.hs.template  DependencyGraph.hs  Java.hs  Main.hs
src/Java/: Annotations.hs  Autowired.hs  Class.hs  Helper.hs  Imports.hs  References.hs  SuperClass.hs
