name:                spring-clean
version:             0.1.0.0
synopsis:            Finds unused classes in a Java Spring MVC project
description:         Please see README.md
homepage:            https://github.com/petercrona/spring-clean#readme
license:             MIT
license-file:        LICENSE
author:              Peter Crona
maintainer:          pcrona@small-improvements.com
copyright:           2016 Peter Crona
category:            Code
build-type:          Simple
cabal-version:       >=1.10

executable spring-clean
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , filepath >= 1.4.0 && < 1.5.0
                     , containers >= 0.5.6 && < 0.6.0
                     , filemanip >= 0.3.6 && < 0.3.7
                     , language-java >= 0.2.8 && < 0.3
                     , parsec >= 3.1.11 && < 3.2
                     , array >= 0.5.1 && < 0.5.2
                     , regex-pcre >= 0.94.4 && < 0.95
  other-modules:       Config
                     , DependencyGraph
                     , Java
                     , Java.Annotations
                     , Java.Autowired
                     , Java.Class
                     , Java.Helper
                     , Java.Imports
                     , Java.References
                     , Java.SuperClass
